--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "gsap": "^3.12.5",
     "mdb-react-ui-kit": "^7.2.0",
     "mdb-ui-kit": "^7.1.0",
     "react": "^18.2.0",
