--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.15.13",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "gsap": "^3.12.5",
