--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
