--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.0.0",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "gsap": "^3.12.5",
     "mdb-react-ui-kit": "^7.2.0",
     "mdb-ui-kit": "^7.1.0",
